feat(server) : Implement board API with server-sent events giving lastCalled tickets for each counter and service type
